frontendmentor/profile-card/profile-style.css
@import url('https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&family=Open+Sans&display=swap');

/* CSS RESET */

:root {
    --clr-darkcyan: hsl(185, 75%, 39%);
    --clr-verydarkcyan: hsl(229, 23%, 23%);
    --clr-grayblue: hsl(227, 10%, 46%);
    --clr-darkgray: hsl(0, 0%, 59%);
    --main-font: 'Kumbh Sans', sans-serif;
}

*,
*::before,
*::after {
    box-sizing: border-box;
}

body,
h1,
h2,
h3,
h4,
p,
figure,
blockquote,
dl,
dd {
    margin: 0;
}

ul[role='list'],
ol[role='list'] {
    list-style: none;
}

html {
    scroll-behavior: smooth;
    width: 100%;
    height: 100%;
}

html:focus-within {
    scroll-behavior: smooth;
}

body {
    width: 100%;
    height: 100%;
    margin: 0;
    text-rendering: optimizeSpeed;
    line-height: 1.5;
}

a:not([class]) {
    text-decoration-skip-ink: auto;
}

img,
picture {
    max-width: 100%;
    display: block;
}

input,
button,
textarea,
select {
    font: inherit;
}

@media (prefers-reduced-motion: reduce) {
    html:focus-within {
     scroll-behavior: auto;
    }
    
    *,
    *::before,
    *::after {
      animation-duration: 0.01ms !important;
      animation-iteration-count: 1 !important;
      transition-duration: 0.01ms !important;
      scroll-behavior: auto !important;
    }
  }

/* STYLING */

.webpage-container {
    background-color: var(--clr-darkcyan);
    background-image:
        url(./images/bg-pattern-top.svg),
        url(./images/bg-pattern-bottom.svg);
    background-position:
        top -450px left -400px,
        bottom -500px right -400px;
    background-repeat: no-repeat;
    width: 100%;
    min-height: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
}

.card {
    font-family: var(--main-font);
    background-color: white;
    -webkit-box-shadow: 5px 7px 34px -15px rgba(0,0,0,0.75);
    -moz-box-shadow: 5px 7px 34px -15px rgba(0,0,0,0.75);
    box-shadow: 5px 7px 34px -15px rgba(0,0,0,0.75);
    width: 400px;
    height: auto;
    border-radius: 15px;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

.card-header {
    background-image: url(./images/bg-pattern-card.svg);
    width: 100%;
    height: 150px;
    border-top-left-radius: 15px;
    border-top-right-radius: 15px;
}

.card-profile-picture {
    margin-top: -4rem;
    z-index: 99;
}

    .card-profile-picture img {
        border-radius: 100%;
        border: 6px solid white;
        width: 120px;
        height: 120px;
    }

.card-profile-name {
    font-weight: 700;
    font-size: 20px;
    margin-top: 1.5rem;
}

    .card-profile-name::after {
        font-weight: 400;
        color: var(--clr-grayblue);
        content: '26';
        margin-left: .5rem;
    }

.card-profile-location {
    color: var(--clr-grayblue);
    margin-top: .3rem;
    margin-bottom: 1.5rem;
}

.card-separator {
    width: 100%;
    height: 1px;
    background-color: var(--clr-grayblue);
    opacity: .3;
}

.card-profile-stats {
    margin-top: .5rem;
    margin-bottom: 1rem;
    width: 100%;
    display: flex;
    justify-content: space-evenly;
}

    .stats-item {
        padding: 1rem;
        display: grid;
        place-items: center;
    }

    .stats-item-header {
        color: var(--clr-verydarkcyan);
        font-weight: 700;
        font-size: 19px;
    }

    .stats-item-desc {
        color: var(--clr-grayblue);
        letter-spacing: .3ch;
        font-size: 14px;
    }

@media screen and (max-width:810px) {
    .webpage-container {
        padding: 1rem;
        background-position:
        top -500px left -800px,
        bottom -500px right -800px;
    }

    .stats-item {
        padding: 1.5rem;
    }

    .card-profile-stats {
        margin-bottom: .5rem;
    }
}

